--- a/index.css
+++ b/index.css
@@ -106,7 +106,33 @@ div.cartodb-legend-stack {
   vertical-align: middle;
 }
 
-
 .CDB-Legend-duration {
   text-transform: lowercase;
+}
+
+.gcTabs {
+  position: absolute;
+  z-index: 999;
+  left: 12px;
+  top: 12px;
+  border: 1px solid rgba(255,255,255,.7);
+  background: rgba(0,0,0,.7);
+  border-radius: 4px;
+}
+
+.gcTab {
+  display: inline-block;
+  padding: 10px 20px;
+  color: rgba(255,255,255,.7);
+  cursor: pointer;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 13px;
+}
+
+.gcTab.selected {
+  color: #fff;
+}
+
+.gcTab:not(:last-child) {
+  border-right: 1px solid rgba(255,255,255,.7);
 }
