--- a/index.css
+++ b/index.css
@@ -136,3 +136,24 @@ div.cartodb-legend-stack {
 .gcTab:not(:last-child) {
   border-right: 1px solid rgba(255,255,255,.7);
 }
+
+
+.gc-feature {
+
+}
+
+.gc-featureLabel {
+  color: #fff;
+  text-align: center;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  background: rgba(0,0,0,.7);
+  padding: 10px 20px;
+  border-radius: 4px;
+  border-radius: 4px;
+  width: 100px;
+  margin-left: -70px;
+  margin-top: 10px;
+
+
+}
