--- a/index.css
+++ b/index.css
@@ -139,21 +139,53 @@ div.cartodb-legend-stack {
 
 
 .gc-feature {
+  fill:#01A3B0;
+  stroke-width: 6px;
+  stroke: #01A3B0;
+  fill-opacity:.1;
+  stroke-opacity: 1;
 
 }
 
 .gc-featureLabel {
-  color: #fff;
   text-align: center;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 13px;
-  background: rgba(0,0,0,.7);
-  padding: 10px 20px;
-  border-radius: 4px;
-  border-radius: 4px;
-  width: 100px;
-  margin-left: -70px;
+  font-family: 'OpenSans-Semibold', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  /*background: rgba(0,0,0,.7);*/
+  /*padding: 10px 20px;*/
+  /*border-radius: 4px;*/
+  /*border-radius: 4px;*/
+  width: 400px;
+  margin-left: -200px;
   margin-top: 10px;
 
+}
 
+.gc-featureLabelLbl {
+  text-transform: capitalize;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.15);
+}
+
+.gc-featureLabelBtn {
+  background: #01A3B0 ;
+  background-image: linear-gradient(-180deg, rgba(0,0,0,0.00) 71%, rgba(0,0,0,0.05) 100%);
+  border: 1px solid rgba(0,0,0,0.10);
+  box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.10);
+  border-radius: 4px;
+  font-family: OpenSans-Semibold;
+  font-size: 13px;
+  color: #FFFFFF ;
+  letter-spacing: 0px;
+  line-height: 20px;
+  padding: 8px 0;
+  margin-top: 16px;
+  margin-left: 100px;
+  width: 200px;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.15);
+
+}
+
+.gc-featureLabelBtn.disabled {
+  opacity: .6;
+  color: rgba(255,255,255,.5)
 }
