--- a/index.css
+++ b/index.css
@@ -115,26 +115,48 @@ div.cartodb-legend-stack {
   z-index: 999;
   left: 12px;
   top: 12px;
-  border: 1px solid rgba(255,255,255,.7);
-  background: rgba(0,0,0,.7);
+  border: 1px solid #979EA1;
   border-radius: 4px;
 }
 
 .gcTab {
+  color: #636D72;
   display: inline-block;
-  padding: 10px 20px;
-  color: rgba(255,255,255,.7);
+  padding: 8px 20px;
   cursor: pointer;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'OpenSans-Semibold', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 13px;
+}
+
+.gcTab .refresh-icon {
+  width: 18px;
+  height: 14px;
+  background-image: url('refresh.svg');
+  display:none;
+  vertical-align: middle;
+  margin-left: 4px;
+}
+
+.gcTab .lbl {
+  vertical-align: middle;
+  display: inline-block;
+  min-height: 14px;
 }
 
 .gcTab.selected {
   color: #fff;
+  background: #636D72;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.00) 50%, rgba(0,0,0,0.08) 100%);
+  box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.30);
+  /*border: 1px solid rgba(0,0,0,0.10);*/
+}
+
+.gcTab.selected .refresh-icon {
+  display: inline-block;
 }
 
 .gcTab:not(:last-child) {
-  border-right: 1px solid rgba(255,255,255,.7);
+  border-right: 1px solid #979EA1;
 }
 
 
@@ -164,4 +186,8 @@ div.cartodb-legend-stack {
 .gc-featureLabelLbl {
   text-transform: capitalize;
   text-shadow: 2px 2px 5px rgba(0,0,0,0.15);
+}
+
+.gc-featureLabelLbl--poly {
+  margin-top: -20px;
 }
